Updated Kotlin options